--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,22 @@
-# Copy this to .env and fill in your Azure DevOps organization and project details
-
 # Azure DevOps Configuration
-AZDO_ORG=yourorganization
-AZDO_PROJECT=yourproject
+AZDO_ORG=your-organization-name
+AZDO_PROJECT=your-project-name
+AZDO_API_VERSION=7.1
+AZDO_RESOURCE_ID=499b84ac-1321-427f-aa17-267ca6975798
 
-# Azure OpenAI Configuration (if using AI features)
-AZURE_OPENAI_ENDPOINT=https://your-openai-resource.openai.azure.com/
+# Azure OpenAI Configuration
+AZURE_OPENAI_ENDPOINT=https://your-endpoint.openai.azure.com/
+AZURE_OPENAI_API_VERSION=2024-08-01-preview
+AZURE_OPENAI_MODEL=gpt-4o
+AZURE_OPENAI_DEPLOYMENT=gpt-4o
 
-# Optional: Specific API version (defaults to 7.1-preview.3)
-AZDO_API_VERSION=7.1-preview.3
+# Optional: Token Limits (uncomment to override defaults)
+# MAX_TOKENS_ANALYSIS=10000
+# MAX_TOKENS_WIQL=2000
+# MAX_TOKENS=16384
+# MAX_COMPLETION_TOKENS=8192
+
+# Cache Configuration
+# Cache TTL in seconds (0 = unlimited, cache lasts until next query)
+# Examples: 600 (10 min), 1800 (30 min), 3600 (1 hour), 0 (unlimited)
+CACHE_TTL_SECONDS=0
